build_errors.txt
    Checking opengl_renderer v0.1.0 (/home/hakko/Desktop/Hakan/Projects/Rust/OpenGL-Renderer-Rust)
error[E0308]: mismatched types
   --> src/game/mod.rs:200:39
    |
200 |             pause_button: Button::new("Pause".to_string(), 1170.0, 660.0, 100.0, 40.0),
    |                           ----------- ^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
    |                           |
    |                           arguments to this function are incorrect
    |
note: associated function defined here
   --> src/ui/button.rs:16:12
    |
 16 |     pub fn new(text: &str, x: f32, y: f32, width: f32, height: f32) -> Self {
    |            ^^^ ----------
help: try removing the method call
    |
200 -             pause_button: Button::new("Pause".to_string(), 1170.0, 660.0, 100.0, 40.0),
200 +             pause_button: Button::new("Pause", 1170.0, 660.0, 100.0, 40.0),
    |

warning: unused import: `Renderable`
  --> src/game/mod.rs:12:28
   |
12 | use crate::scene::object::{Renderable, SceneObject3D};
   |                            ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `opengl_renderer` (bin "opengl_renderer") generated 1 warning
error: could not compile `opengl_renderer` (bin "opengl_renderer") due to 1 previous error; 1 warning emitted
